# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./despesas";
 export * from "./lancamentos";
 export * from "./perfis";
 export * from "./assinaturas";
+export * from "./funcionarios";
